--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,78 +1,86 @@
- 	<!-- Website Theme: MINIMAL by BlackTie.co -->
+<!-- Website Theme: MINIMAL by BlackTie.co -->
 
 <!DOCTYPE html>
-	<html lang="en" xmlns:padding-bottom="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="assets/img/calendar-white.png">
+<html lang="en" xmlns:padding-bottom="http://www.w3.org/1999/xhtml">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="shortcut icon" href="assets/img/calendar-white.png">
 
-    <title>Frienduler</title>
+  <title>Frienduler</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="assets/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="assets/css/main.css" rel="stylesheet">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <!-- Custom styles for this template -->
+  <link href="assets/css/landingpage.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
-    <script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/modernizr.custom.js"></script>
-	
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/modernizr.custom.js"></script>
 
-	
-    <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="assets/js/html5shiv.js"></script>
-      <script src="assets/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
 
-  <body data-spy="scroll" data-offset="0" data-target="#theMenu">
-  <!-- Menu -->
-  <nav class="menu" id="theMenu">
-	  <div class="menu-wrap">
-		  <h1 class="logo"><a href="index.html#home">Frienduler</a></h1>
-		  <i class="icon-remove menu-close"></i>
-		  <a href="#home" class="smoothScroll">Home</a>
-		  <a href="#faq" class="smoothScroll">FAQ</a>
-		  <a href="#login" class="smoothScroll">Login</a>
-	  </div>
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css">
 
-	  <!-- Menu button -->
-	  <div id="menuToggle"><i class="icon-reorder"></i></div>
-  </nav>
-		
-	<!-- ========== HEADER SECTION ========== -->
-	<section id="home" name="home"></section>
-	<div id="headerwrap">
-		<div class="container">
-			<div class="logo">
-				<img src="assets/img/calendar-white.png" width="80" height="71">
-			</div>
-			<div class="row">
-				<h1>
-					<font color = "FFFFFF">Frienduler</font>
-				</h1>
-				<h3>
-					<font color = "FFFFFF">The Scheduler with Friends</font>
-				</h3>
-				<br>
-				<br>
-				<div class="col-lg-6 col-lg-offset-3">
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+  <script src="assets/js/html5shiv.js"></script>
+  <script src="assets/js/respond.min.js"></script>
+  <![endif]-->
+</head>
+
+<body data-spy="scroll" data-offset="0" data-target="#theMenu">
+<!-- Menu -->
+<nav class="menu" id="theMenu">
+  <div class="menu-wrap">
+    <h1 class="logo"><a href="index.html">Frienduler</a></h1>
+    <i class="icon-remove menu-close"></i>
+    <!-- TODO: redirect to pages (home/login should be same as landing page) -->
+    <a href="#home">Home</a>
+    <a href="./Frienduler/FAQ">FAQ</a>
+    <a href="#login">Login</a>
+  </div>
+
+  <!-- Menu button -->
+  <div id="menuToggle"><i class="icon-reorder"></i></div>
+</nav>
+
+<!-- ========== HEADER SECTION ========== -->
+<section id="home">
+  <div id="headerwrap">
+    <div class="container">
+      <div class="logo">
+        <img src="assets/img/calendar-white.png" width="80" height="71">
+      </div>
+      <div class="row">
+        <h1>
+          <font color = "FFFFFF">Frienduler</font>
+        </h1>
+        <h3>
+          <font color = "FFFFFF">The Scheduler with Friends</font>
+        </h3>
+        <br>
+        <br>
+        <div class="col-lg-6 col-lg-offset-3">
+          <!-- TODO: make the login field actually do something -->
           <h2>
             <font color = "FFFFFF">Login</font>
           </h2>
-				</div>
-			</div>
-		</div><!-- /container -->
-	</div><!-- /headerwrap -->
+          <form method="post" action="index.html">
+            <p>
+              <input type="text" name="login" value="" placeholder="Username">
+            </p>
+          </form>
+        </div>
+      </div>
+    </div>	<!-- /container -->
+  </div>	<!-- /headerwrap -->
+</section>
 <!--
   &lt;!&ndash; Login &ndash;&gt;
   <section id="login" name="login"></section>
@@ -83,21 +91,21 @@
       </h1>
     </div>
   </div>-->
-	
-	<!-- Footer -->
-	<footer id="footer">
-		<div id="f">
-			<span class="copyright">&copy; GHNGO, <script>document.write(new Date().getFullYear())</script>. Design: <a href="http://blacktie.co/">BlackTie.co</a></span>
-		</div>
-	</footer>
+
+<!-- Footer -->
+<footer id="footer">
+  <div id="f">
+    <span class="copyright">&copy; GHNGO, <script>document.write(new Date().getFullYear())</script>. Design: <a href="http://blacktie.co/">BlackTie.co</a></span>
+  </div>
+</footer>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-	<script src="assets/js/classie.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
-    <script src="assets/js/smoothscroll.js"></script>
-	<script src="assets/js/main.js"></script>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="assets/js/classie.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/smoothscroll.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
