added menu button to MainPG.ftl, added/modified TODO

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,9 +38,8 @@
 <!-- Menu -->
 <nav class="menu" id="theMenu">
   <div class="menu-wrap">
-    <h1 class="logo"><a href="index.html">Frienduler</a></h1>
+    <h1 class="logo"><a href="./">Frienduler</a></h1>
     <i class="icon-remove menu-close"></i>
-    <!-- TODO: redirect to pages (home/login should be same as landing page) -->
     <a href="#home" class="smoothScroll">Home</a>
     <a href="#login" class="smoothScroll">Login</a>
     <a href="#faq" class="smoothScroll">FAQ</a>
