User Login Implemented
User can now see their table by typing in their userid in main page.
Set so any unknown user automatically gets added to base.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -69,9 +69,9 @@
           <h2>
             <font color = "FFFFFF">Login</font>
           </h2>
-          <form method="post" action="index.html">
+          <form onSubmit="return userInput();">
             <p>
-              <input type="text" name="login" value="" placeholder="Username">
+              <input type="text" name="login" value="" placeholder="Username" id="userId">
             </p>
           </form>
         </div>
@@ -123,3 +123,12 @@
 <script src="assets/js/main.js"></script>
 </body>
 </html>
+
+<script>
+function userInput(){
+    var url = "Frienduler/" + document.getElementById("userId").value;
+    location.href = url;
+    return false;
+}
+</script>
+
