Edited URLs so that everything to do with a user has a /user/ in the url
Fixed createEvent page
Fixed main page so it reads schedules from the database

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -126,7 +126,7 @@
 
 <script>
 function userInput(){
-    var url = "Frienduler/" + document.getElementById("userId").value;
+    var url = "Frienduler/user/" + document.getElementById("userId").value;
     location.href = url;
     return false;
 }
